# Super-Slow-Motion-Video

./: .gitignore  CMakeLists.txt  CWMPEventDispatch.h  CWMPHost.cpp  CWMPHost.h  FlowVectors  FlowVectors.cpp  FlowVectors.h  Makefile  Pipfile  PresentationVideoPlayer.cpp  PresentationVideoPlayer.rc  PresentationVideoPlayer.sln  PresentationVideoPlayer.vcxproj  PresentationVideoPlayer.vcxproj.filters  README.md  Resource.h  StdAfx.h  UpgradeLog.htm  VideoPlayer.cpp  VideoPlayer.h  VideoPlayerDispatch.cpp  VideoPlayerDispatch.h  config.hpp  config.py  dataset.py  dialogs.h  example_script.sh  faster_y4m.cpp  ffmpeggtest.bat  flowReader.py  flowVectorFrame.cpp  flowVectorFrame.hpp  flowVectorService.cpp  flowVectorService.hpp  frameLoader.cpp  frameLoader.hpp  getFlowVectors2.py  main.cpp  make.sh  (+21 more)
Debug/: vc143.idb  wmphost.exe.recipe  wmphost.res  wmphost.vcxproj.FileListAbsolute.txt
Debug/wmphost.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  wmphost.lastbuildstate
ExportProject/: ExportProject.vdproj
ExportProject/Debug/: ExportProject.msi
Source/CPPSrc/: FlowVectors.cpp  FlowVectors.h
Source/PySrc/: config.py  getFlowVectors2.py  model.py  slowmotion.py  utils.py
Super-Slow-Motion-Video-LN-ProjectStructure/: .gitignore  requirements.txt
Super-Slow-Motion-Video-LN-ProjectStructure/Source/PySrc/: FlowFrame.py  flowvectors.py  model.py  slowmotion.py  utils.py
Super-Slow-Motion-Video-LN-ProjectStructure/UserDir/ExampleProj1/: test.bat  testNewFlder.bat
UserDir/ExampleProj1/: make.sh  test.bat  test.sh
UserDir/ExampleProj1/FloDir/: _00000.flo
appOFCuda/: getFlowVectors2.py
appOFCuda/Release/: AppOFCuda.exp  AppOFCuda.lib
floOut/: _00000_middlebury.flo  _00001_middlebury.flo  _00002_middlebury.flo  _00003_middlebury.flo  _00005_middlebury.flo  _00006_middlebury.flo  _00011_middlebury.flo  _00012_middlebury.flo  _00015_middlebury.flo  _00016_middlebury.flo  _00017_middlebury.flo  _00018_middlebury.flo  _00019_middlebury.flo  _00020_middlebury.flo  _00021_middlebury.flo  _00022_middlebury.flo  _00023_middlebury.flo  _00026_middlebury.flo  _00027_middlebury.flo  _00028_middlebury.flo  _00029_middlebury.flo  _00032_middlebury.flo  _00033_middlebury.flo  _00036_middlebury.flo  _00039_middlebury.flo  _00042_middlebury.flo  _00044_middlebury.flo  _00048_middlebury.flo  _00049_middlebury.flo  _00050_middlebury.flo  _00052_middlebury.flo
flowFiles/: _00004_middlebury.flo  _00007_middlebury.flo  _00008_middlebury.flo  _00009_middlebury.flo  _00010_middlebury.flo  _00013_middlebury.flo  _00014_middlebury.flo  _00024_middlebury.flo  _00025_middlebury.flo  _00030_middlebury.flo  _00031_middlebury.flo  _00034_middlebury.flo  _00035_middlebury.flo  _00037_middlebury.flo  _00038_middlebury.flo  _00040_middlebury.flo  _00041_middlebury.flo  _00043_middlebury.flo  _00045_middlebury.flo  _00046_middlebury.flo  _00047_middlebury.flo  _00051_middlebury.flo
model/: config.py  dataset.py  generateFlowVectors.py  generateFrames.py  model.py  train.py
service/: .gitignore  config.hpp  example_script.sh  flowVectorFrame.cpp  flowVectorFrame.hpp  flowVectorService.cpp  flowVectorService.hpp  main.cpp  model.cpp  slowMotionService.cpp  slowMotionService.hpp  train.py  videoProcessor.cpp  videoProcessor.hpp  zhelpers.hpp  zmq.hpp  zmq_addon.hpp
x64/Debug/: wmphost.exe.recipe  wmphost.res  wmphost.vcxproj.FileListAbsolute.txt
x64/Debug/wmphost.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  wmphost.lastbuildstate
